--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.479.0",
     "mongodb": "^6.14.2",
+    "mongoose": "^8.12.1",
     "next": "15.2.2-canary.6",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
@@ -28,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.2-canary.6",
     "tailwindcss": "^4",
