--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "@radix-ui/react-slot": "^1.1.2",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
