--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.479.0",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
+    "nanoid": "^5.1.5",
     "next": "15.2.2-canary.6",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
